<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_60sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:src="@drawable/ic_supermarket" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/mobile"
            android:textColor="@color/lite_black"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/rectangle_bg"
            android:hint="@string/enter_mobile"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:maxLines="1"
            android:text="@string/password"
            android:textColor="@color/lite_black"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/rectangle_bg"
            android:hint="@string/enter_pwd"
            android:imeOptions="actionDone"
            android:maxLines="1" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/button_bg"
            android:text="@string/submit"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/forgotpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/forgot_password"
            android:textSize="15sp"
            android:textStyle="bold" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/signuptxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/_20sdp"
        android:padding="5dp"
        android:text="@string/donthave"
        android:textColor="@color/lite_black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold" />
</RelativeLayout>
