<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data >

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/sendotplayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="@dimen/_5sdp"
                android:text="@string/wecanimporve"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/lite_black" />

            <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@drawable/rectangle_bg" />


            <com.goodeggs.android.fontstyles.ButtonMedium
                android:id="@+id/verifyotp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/sixteen"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@drawable/button_bg"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@color/lite_black" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/otpsavelayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/verifymobile"
                android:textColor="@color/lite_black"
                android:textSize="@dimen/_18sdp" />

            <EditText
                android:id="@+id/otpet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/rectangle_bg"
                android:hint="@string/enterotp"
                android:inputType="number" />


            <Button
                android:id="@+id/sendotp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/button_bg"
                android:text="@string/verifynow"
                android:textAllCaps="false"
                android:textColor="@color/white" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/passwordlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:visibility="gone">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/lite_black"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/rectangle_bg"
                android:hint="@string/enter_pwd"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/con_password"
                android:textColor="@color/lite_black"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/rectangle_bg"
                android:hint="@string/enter_con_password"
                android:inputType="textPassword" />


            <Button
                android:id="@+id/sendpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/button_bg"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white" />


        </LinearLayout>


    </LinearLayout>
</layout>