<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Home">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/quefour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/colorPrimary"
                android:text="@string/quefour"
                android:textAllCaps="false"
                android:textColor="@color/white" />


            <Button
                android:id="@+id/quetwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/colorPrimary"
                android:text="@string/quetwo"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:visibility="gone" />

            <Button
                android:id="@+id/quethree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/colorPrimary"
                android:text="@string/quethree"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/queone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@color/colorPrimary"
                android:text="@string/queone"
                android:textAllCaps="false"
                android:textColor="@color/white" />


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>