<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="ActivityOtpBinding">

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/otpsavelayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/verifymobile"
                android:textColor="@color/lite_black"
                android:textSize="@dimen/_18sdp" />

            <EditText
                android:id="@+id/otpet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/rectangle_bg"
                android:hint="@string/enterotp"
                android:inputType="number"
                android:singleLine="true" />


            <Button
                android:id="@+id/verifynowbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/button_bg"
                android:text="@string/verifynow"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/resendbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/transperent"
                android:padding="@dimen/_5sdp"
                android:text="@string/resend"
                android:textColor="@color/lite_black"
                android:textSize="@dimen/_12sdp" />


        </LinearLayout>

    </LinearLayout>
</layout>