<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:visibility="visible">

            <ProgressBar
                android:id="@+id/loading"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorAccent"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/otpsavelayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"

                android:gravity="center_vertical"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/emaildregister"
                    android:textColor="@color/lite_black"
                    android:textSize="@dimen/_14sdp" />

                <EditText
                    android:id="@+id/emailIdEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/rectangle_bg"
                    android:hint="@string/emailid"
                    android:imeOptions="actionDone"
                    android:maxLength="30"

                    android:maxLines="1"
                    android:paddingStart="5dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/lite_black"
                    android:textSize="@dimen/_12sdp" />


                <Button
                    android:id="@+id/sendemailBtn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:background="@drawable/button_bg"
                    android:text="@string/sendemail"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/resendbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@color/transperent"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/resend"
                    android:textColor="@color/lite_black"
                    android:textSize="@dimen/_12sdp"
                    android:visibility="gone" />


            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</layout>